--- a/My page/style/main.css
+++ b/My page/style/main.css
@@ -22,16 +22,16 @@ button {
 }
 
 button:hover {
-    -webkit-box-shadow: 0px 18px 25px -2px rgba(255, 0, 0, 0.75);
-    -moz-box-shadow: 0px 18px 25px -2px rgba(255, 0, 0, 0.75);
-    box-shadow: 0px 18px 25px -2px rgba(255, 0, 0, 0.75);
+    -webkit-box-shadow: 0px 18px 25px -2px rgba(255, 100, 0, 0.75);
+    -moz-box-shadow: 0px 18px 25px -2px rgba(255, 100, 0, 0.75);
+    box-shadow: 0px 18px 25px -2px rgba(255, 100, 0, 0.75);
     transform: translateY(-7px);
 }
 
 button:active {
-    -webkit-box-shadow: 0px 18px 25px -2px rgb(255, 0, 0);
-    -moz-box-shadow: 0px 18px 25px -2px rgb(255, 0, 0);
-    box-shadow: 0px 18px 25px -2px rgb(255, 0, 0);
+    -webkit-box-shadow: 0px 18px 25px -2px rgb(255, 100, 0);
+    -moz-box-shadow: 0px 18px 25px -2px rgb(255, 100, 0);
+    box-shadow: 0px 18px 25px -2px rgb(255, 100, 0);
     transform: translateY(-3px);
     outline: none;
 }
@@ -45,9 +45,7 @@ li {
 }
 
 .inline {
-    display: -webkit-flex;
-    -webkit-flex-wrap: wrap;
-    flex-wrap: wrap;
+   width: 100%;
     display: flex;
 }
 
@@ -149,7 +147,7 @@ li {
     border: double 3px rgb(255, 102, 0);
     margin: 25px auto;
     padding: 15px;
-    width: 80%;
+    width: 90%;
     height: 85%;
     border-radius: 3px;
 }
@@ -158,12 +156,13 @@ li {
     border: 2px solid rgb(135, 134, 134);
     border-radius: 4px;
     padding: 4px;
-    max-width: 50%;
+    max-width: 100px;
     height: auto;
+    margin: 0 15px 0 20px;
 }
 
-abtMe_Content {
-    width: 60%;
+.abtMe_Content {
+    width:70%;
 }
 
 .abtMe_Skills {
@@ -264,7 +263,20 @@ abtMe_Content {
 #send {
     transition: all .2s ease-in-out;
 }
+#clear:hover {
+    -webkit-box-shadow: 0px 18px 25px -2px rgba(255, 0, 0, 0.75);
+    -moz-box-shadow: 0px 18px 25px -2px rgba(255, 0, 0, 0.75);
+    box-shadow: 0px 18px 25px -2px rgba(255, 0, 0, 0.75);
+    transform: translateY(-7px);
+}
 
+#clear:active {
+    -webkit-box-shadow: 0px 18px 25px -2px rgb(255, 0, 0);
+    -moz-box-shadow: 0px 18px 25px -2px rgb(255, 0, 0);
+    box-shadow: 0px 18px 25px -2px rgb(255, 0, 0);
+    transform: translateY(-3px);
+    outline: none;
+}
 #send:hover {
     -webkit-box-shadow: 0px 18px 25px -2px rgba(0, 255, 0, 0.75);
     -moz-box-shadow: 0px 18px 25px -2px rgba(0, 255, 0, 0.75);
@@ -392,15 +404,25 @@ abtMe_Content {
     .contactForm_imput---Message {
         margin: 0px auto;
     }
+    .abtMe_Photo {
+        display: none;
+    }
+    .abtMe_Content {
+        font-size: 18px;
+        width: 90%;
+        text-align: center;
+    }
     .abtMe_Skills {
         display: none;
         font-size: 10px;
+        text-align: center;
     }
     #showSkills {
         display: block;
         margin: 40px auto;
     }
 }
+
 
 @media only screen and (max-width: 401px) {
     .nav {
@@ -433,5 +455,8 @@ abtMe_Content {
     }
     .contactForm_imput---Message {
         margin: 10px;
+    }
+    .abtMe_Skills{
+        text-align: center;
     }
 }
